flux/apps/overlays/local-kind/linkerd-viz/linkerd-viz.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkerd-viz
  namespace: linkerd-viz
  annotations:
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:web.linkerd-viz.svc.cluster.local:8084
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - linkerd.localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: web
      port: 8084
